RESOLVED FIXED302049
AX: `contextmenu` event is not fired for either keyboard event or AT event (e.g. VoiceOver's VO+Shift+M) in iframes
https://bugs.webkit.org/show_bug.cgi?id=302049
Summary AX: `contextmenu` event is not fired for either keyboard event or AT event (e...
James Craig
Reported 2025-11-05 16:44:44 PST
AX: `contextmenu` event is not fired for either keyboard event or AT event (e.g. VoiceOver's VO+Shift+M) A colleague at Slack reached out to mention their web app is lacking functionality related to context menus, due to this WebKit bug. Keyboard Access - Ctrl+Return is the AppKit convention for triggering a contextual menu in native apps, but this doesn't trigger the menu or the `contextmenu` event in Safari/WebKit Assistive Technology - Easiest example is probably VoiceOver's VO+Shift+M (depending on VO settings, Ctrl+Opt+Shift+M) which triggers the menu as intended, but doesn't fire the `contextmenu` event. Both of these should be fixed in WebKit. https://codepen.io/toddlr/pen/MYKdJqO?editors=1111
Attachments
screen shot showing platform convention (1012.82 KB, image/png)
2025-11-05 16:47 PST, James Craig
no flags
Radar WebKit Bug Importer
Comment 1 2025-11-05 16:44:50 PST
James Craig
Comment 2 2025-11-05 16:47:38 PST
Created attachment 477317 [details] screen shot showing platform convention
Tyler Wilcock
Comment 3 2026-04-07 21:35:53 PDT
I can reproduce the issue only when the element is inside an iframe (let me know if anyone experiences otherwise).
Tyler Wilcock
Comment 4 2026-04-08 09:32:55 PDT
EWS
Comment 5 2026-04-09 21:01:18 PDT
Committed 310897@main (38d9120295b6): <https://commits.webkit.org/310897@main> Reviewed commits have been landed. Closing PR #62278 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.